--- a/director/director/templates/layout.html
+++ b/director/director/templates/layout.html
@@ -13,28 +13,28 @@
   </head>
   <body>
   <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <a class="navbar-brand" href="#">Director</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-              </li>
-<!--              <li class="nav-item">-->
-<!--                <a class="nav-link" href="#">Features</a>-->
+<!--      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">-->
+<!--          <a class="navbar-brand" href="#">Director</a>-->
+<!--          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">-->
+<!--            <span class="navbar-toggler-icon"></span>-->
+<!--          </button>-->
+<!--          <div class="collapse navbar-collapse" id="navbarText">-->
+<!--            <ul class="navbar-nav mr-auto">-->
+<!--              <li class="nav-item active">-->
+<!--                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>-->
 <!--              </li>-->
-<!--              <li class="nav-item">-->
-<!--                <a class="nav-link" href="#">Pricing</a>-->
-<!--              </li>-->
-            </ul>
-            <span class="navbar-text">
+<!--&lt;!&ndash;              <li class="nav-item">&ndash;&gt;-->
+<!--&lt;!&ndash;                <a class="nav-link" href="#">Features</a>&ndash;&gt;-->
+<!--&lt;!&ndash;              </li>&ndash;&gt;-->
+<!--&lt;!&ndash;              <li class="nav-item">&ndash;&gt;-->
+<!--&lt;!&ndash;                <a class="nav-link" href="#">Pricing</a>&ndash;&gt;-->
+<!--&lt;!&ndash;              </li>&ndash;&gt;-->
+<!--            </ul>-->
+<!--            <span class="navbar-text">-->
 
-            </span>
-          </div>
-        </nav>
+<!--            </span>-->
+<!--          </div>-->
+<!--        </nav>-->
 
 <!--      <nav class="navbar navbar-dark fixed-top bg-dark">-->
 <!--          <div class="container-fluid">-->
