--- a/director/director/static/lower.css
+++ b/director/director/static/lower.css
@@ -11,7 +11,7 @@ main {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0.0);
 }
 
 .animation {
@@ -21,7 +21,7 @@ main {
 }
 
 .red {
-  color: #cf4c4e;
+  color: #f2e24d;
 }
 
 .white {
@@ -88,15 +88,23 @@ main {
 #animation-1 > div:first-child {
   font-size: 4.8em;
   top: -0.13em;
-  animation: 4s cubic-bezier(0.19, 0.76, 0.32, 1) infinite alternate both animation-1-slash;
+  animation: 4s cubic-bezier(0.19, 0.76, 0.32, 1) 2 alternate both animation-1-slash;
 }
-#animation-1 > div:nth-child(2), #animation-1 > div:nth-child(3) {
+#animation-1 > div:nth-child(2) {
+  font-size: 2em;
+  font-weight: bold;
+  height: 1em;
+  width: 20em;
+}
+
+#animation-1 > div:nth-child(3) {
   font-size: 2em;
   height: 1em;
   width: 20em;
 }
+
 #animation-1 > div:nth-child(2) div, #animation-1 > div:nth-child(3) div {
-  animation: 4s cubic-bezier(0.19, 0.76, 0.32, 1) infinite alternate both;
+  animation: 4s cubic-bezier(0.19, 0.76, 0.32, 1) 2 alternate both;
 }
 #animation-1 div:nth-child(2) {
   top: 0;
