--- a/director/director/templates/index.html
+++ b/director/director/templates/index.html
@@ -60,15 +60,11 @@
 {% endblock %}
 {% block content %}
 <form action="/button-click">
+    <input type="hidden" name="show" value="{{ show }}" />
     <div class="button-grid scene">
-        <button name="scene" type="submit" value="Interview - me (minimal)">Intro</button>
-        <button name="scene" type="submit" value="Dev Matters - Intro">Title</button>
-        <button name="scene" type="submit" value="Interview - 2 guests">2 People</button>
-        <button name="scene" type="submit" value="Interview - me">Me</button>
-        <button name="scene" type="submit" value="Interview - me (b-roll)">Me (BR)</button>
-        <button name="scene" type="submit" value="Dev Matters - Commercial">Commercial</button>
-        <button name="scene" type="submit" value="Interview - guest 1">Guest 1</button>
-        <button name="scene" type="submit" value="Interview - guest 1 (b-roll)">Guest 1 (BR)</button>
+        {% for scene in scenes %}
+            <button name="scene" type="submit" value="{{ scene.obs_name }}">{{ scene.label }}</button>
+        {% endfor %}
     </div>
     <div class="button-grid section">
         {% for key in sections %}
