--- a/director/director/templates/slides/myths-of-software-dev-over-40-tech-talk-discussion.html
+++ b/director/director/templates/slides/myths-of-software-dev-over-40-tech-talk-discussion.html
@@ -1,24 +1,158 @@
 
 {% extends "slides_master.html" %}
-            {% block title %}Myths of software dev over 40 - tech talk/discussion{% endblock %}
+            {% block title %}Myths of software dev over 40{% endblock %}
 {% block content %}
             
             <section>
-                <h2>Myths of software dev over 40 - tech talk/discussion</h2>
+                <h2>Myths of software dev over 40</h2>
                 <small>Don Brown<br />CTO/Co-founder, Sleuth</small>
             </section>
                             
-<section>
+<section data-background-image="{{ url_for('static', filename='images') }}/man-dispair.jpg">
     <h2>Myths of software dev over 40</h2>
     <p>
     Yes, there is life after 40
     </p>
 </section>
                 
-<section>
-    <h2>#1 - Hard to get a job</h2>
+<section data-background-image="{{ url_for('static', filename='images') }}/grandparents.jpg">
+    <h2>Who is this for?</h2>
     <p>
-    Blah
+    Not just us GenX 'boomers'
+    </p>
+</section>
+                
+<section data-background-image="{{ url_for('static', filename='images') }}/man-laptop-coding.jpg">
+    <h2>Want to learn to code?</h2>
+    <p>
+    Know what you are getting into
+    </p>
+</section>
+                
+<section data-background-image="{{ url_for('static', filename='images') }}/girl-laptop-frustrated.jpg">
+    <h2>New to coding?</h2>
+    <p>
+    This is what awaits you :)
+    </p>
+</section>
+                
+<section data-background-image="{{ url_for('static', filename='images') }}/man-programming.jpg">
+    <h2>Been coding a while?</h2>
+    <p>
+    Old people unite!
+    </p>
+</section>
+                
+<section>
+    <h2>#1 - Programming is for the young</h2>
+    <p class="fragment">
+    Start with a softball...
+    </p>
+    <img class="fragment" src="{{ url_for('static', filename='images') }}/myth-busted.jpg">
+</section>
+                
+<section>
+    <h2>#2 - You lose time and energy</h2>
+    <img class="fragment" src="{{ url_for('static', filename='images') }}/myth-confirmed.jpg">
+    <p class="fragment">
+    Ok, this one is true
+    </p>
+</section>
+                
+<section>
+    <h2>#3 - Side projects get a lot harder</h2>
+    <img class="fragment" src="{{ url_for('static', filename='images') }}/myth-confirmed.jpg">
+    <p class="fragment">
+    The problem is knowing too much
+    </p>
+</section>
+                
+<section>
+    <h2>#4 - Too old to create a startup</h2>
+    <img class="fragment" src="{{ url_for('static', filename='images') }}/myth-busted.jpg">
+    <p class="fragment">
+    The average age is 45
+    </p>
+</section>
+                
+<section  data-background-image="{{ url_for('static', filename='images') }}/man-heaven.jpg">
+    <h2>#5 - A 40+ dev is a failed dev</h2>
+    <img class="fragment" src="{{ url_for('static', filename='images') }}/myth-busted.jpg">
+    <p class="fragment">
+    Many paths to satisfaction
+    </p>
+</section>
+                
+<section>
+    <h2>#6 - Hard to get a new job</h2>
+    <img class="fragment" src="{{ url_for('static', filename='images') }}/myth-plausable.jpg">
+    <p class="fragment">
+    Ageism is real
+    </p>
+</section>
+                
+<section>
+    <h2>#7 - New tech is worse</h2>
+    <img class="fragment" src="{{ url_for('static', filename='images') }}/myth-busted.jpg">
+    <p class="fragment">
+    Maybe, but the game changed
+    </p>
+</section>
+                
+<section data-background-image="{{ url_for('static', filename='images') }}/code-javascript.jpg">
+    <h2>#8 - Javascript is a mess</h2>
+    <img class="fragment" src="{{ url_for('static', filename='images') }}/myth-confirmed.jpg">
+    <p class="fragment">
+    Ok, this one is true :)
+    </p>
+</section>
+                
+<section>
+    <h2>#9 - Older devs are better at working remote</h2>
+    <img class="fragment" src="{{ url_for('static', filename='images') }}/myth-plausable.jpg">
+    <p class="fragment">
+    Yes, but not always
+    </p>
+</section>
+                
+<section>
+    <section>
+        <h2>#10 - Older devs should be in management</h2>
+        <img class="fragment" src="{{ url_for('static', filename='images') }}/myth-busted.jpg">
+        <p class="fragment">
+        Management is a different career
+        </p>
+    </section>
+    <section>
+        <h3>Career paths</h3>
+        <ul>
+            <li class="fragment">Principal dev - 80% coding</li>
+            <li class="fragment">Architect - 50% coding</li>
+            <li class="fragment">Team lead - 30% coding</li>
+        </ul>
+    </section>
+</section>
+                
+<section data-background-image="{{ url_for('static', filename='images') }}/team-collaboration.jpg">
+    <h2>#11 - The best team is senior-only</h2>
+    <img class="fragment" src="{{ url_for('static', filename='images') }}/myth-busted.jpg">
+    <p class="fragment">
+    Need a mix for best results
+    </p>
+</section>
+                
+<section data-background-image="{{ url_for('static', filename='images') }}/man-old-beard.jpg">
+    <h2>#12 - Over 40 is too late to get started</h2>
+    <img class="fragment" src="{{ url_for('static', filename='images') }}/myth-busted.jpg">
+    <p class="fragment">
+    Never too late - Sign up to <a href="https://sleuth.io">Sleuth</a> today!
+    </p>
+</section>
+                
+<section>
+    <h2>What myths do you see or still hold?</h2>
+    <p>
+    Let's hear it
     </p>
 </section>
                 
