--- a/director/director/templates/slides/myths-of-software-dev-over-40-tech-talk-discussion.html
+++ b/director/director/templates/slides/myths-of-software-dev-over-40-tech-talk-discussion.html
@@ -10,35 +10,35 @@
                             
 <section data-background-image="{{ url_for('static', filename='images') }}/man-dispair.jpg">
     <h2>Myths of software dev over 40</h2>
-    <p>
+    <p class="on-pic">
     Yes, there is life after 40
     </p>
 </section>
                 
 <section data-background-image="{{ url_for('static', filename='images') }}/grandparents.jpg">
     <h2>Who is this for?</h2>
-    <p>
+    <p class="on-pic">
     Not just us GenX 'boomers'
     </p>
 </section>
                 
 <section data-background-image="{{ url_for('static', filename='images') }}/man-laptop-coding.jpg">
     <h2>Want to learn to code?</h2>
-    <p>
+    <p class="on-pic">
     Know what you are getting into
     </p>
 </section>
                 
 <section data-background-image="{{ url_for('static', filename='images') }}/girl-laptop-frustrated.jpg">
     <h2>New to coding?</h2>
-    <p>
+    <p class="on-pic">
     This is what awaits you :)
     </p>
 </section>
                 
 <section data-background-image="{{ url_for('static', filename='images') }}/man-programming.jpg">
     <h2>Been coding a while?</h2>
-    <p>
+    <p class="on-pic">
     Old people unite!
     </p>
 </section>
