--- a/director/director/templates/slides_master.html
+++ b/director/director/templates/slides_master.html
@@ -57,6 +57,7 @@
 				progress: true,
 				center: true,
 				hash: true,
+				autoPlayMedia: true,
 				// Learn about plugins: https://revealjs.com/plugins/
 				plugins: [ RevealZoom, RevealNotes, RevealSearch, RevealMarkdown, RevealHighlight ]
 			});
